@@ -1,6 +1,7 @@
 Version 7.3
 ~~~~~~~~~~~
 Post DiFX-1.5.3
+Add difxVersion to difxStartMessage
 
 Version 7.2
 ~~~~~~~~~~~
